--- a/index.html
+++ b/index.html
@@ -32,45 +32,45 @@
         
         /* Madness Effects */
         .madness-hallucination {
-            animation: hallucination 10s infinite alternate;
+            animation: hallucination 6s infinite alternate;
         }
         @keyframes hallucination {
-            0% { filter: hue-rotate(0deg) blur(0px); }
-            25% { filter: hue-rotate(15deg) blur(0.5px); }
-            50% { filter: hue-rotate(-10deg) blur(1px) contrast(1.2); }
-            75% { filter: hue-rotate(5deg) blur(0px); }
-            100% { filter: hue-rotate(0deg) blur(0.5px); }
+            0% { filter: hue-rotate(0deg) blur(0px); transform: scale(1); }
+            33% { filter: hue-rotate(30deg) blur(1px) contrast(1.2); transform: scale(1.02) skewX(2deg); }
+            66% { filter: hue-rotate(-20deg) blur(0.5px) sepia(0.5); transform: scale(1.01) skewY(-2deg); }
+            100% { filter: hue-rotate(0deg) blur(0px); transform: scale(1); }
         }
 
         .madness-paranoia {
-            filter: grayscale(80%) sepia(20%) contrast(1.5) drop-shadow(0 0 10px rgba(0,0,0,0.8));
-            animation: breathing 5s infinite ease-in-out;
+            filter: grayscale(100%) contrast(1.2);
+            box-shadow: inset 0 0 150px 100px #000;
         }
-        @keyframes breathing {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.01); }
+        /* Simulated Vignette via pseudo-element not easily possible on body directly without breaking layout, using filter hacks */
+        body.madness-paranoia::after {
+            content: "";
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: radial-gradient(circle, transparent 40%, black 100%);
+            pointer-events: none;
+            z-index: 9999;
         }
 
         .madness-hysteria {
-            animation: shake 0.5s infinite;
-            filter:  saturate(200%) tint(100%);
+            animation: shake 0.4s infinite;
+            filter: saturate(300%) brightness(1.2) tint(100%);
         }
         @keyframes shake {
             0% { transform: translate(1px, 1px) rotate(0deg); }
-            10% { transform: translate(-1px, -2px) rotate(-1deg); }
-            20% { transform: translate(-3px, 0px) rotate(1deg); }
-            30% { transform: translate(3px, 2px) rotate(0deg); }
-            40% { transform: translate(1px, -1px) rotate(1deg); }
-            50% { transform: translate(-1px, 2px) rotate(-1deg); }
-            60% { transform: translate(-3px, 1px) rotate(0deg); }
-            70% { transform: translate(3px, 1px) rotate(-1deg); }
-            80% { transform: translate(-1px, -1px) rotate(1deg); }
-            90% { transform: translate(1px, 2px) rotate(0deg); }
-            100% { transform: translate(1px, -2px) rotate(-1deg); }
+            20% { transform: translate(-2px, -2px) rotate(-1deg); }
+            40% { transform: translate(2px, -1px) rotate(1deg); }
+            60% { transform: translate(-2px, 2px) rotate(0deg); }
+            80% { transform: translate(2px, 1px) rotate(-1deg); }
+            100% { transform: translate(0px, 0px) rotate(0deg); }
         }
 
         .madness-catatonia {
-             filter: brightness(0.4) contrast(2) grayscale(100%);
+             filter: brightness(0.3) contrast(1.5) grayscale(100%) blur(1px);
+             transition: filter 2s ease-in;
         }
 
         ::-webkit-scrollbar {
