fix(storage): Prevent QuotaExceededError on save
Stripped image data from board tiles before saving to localStorage. Re-hydrated images from the asset library on load. Wrapped storage operations in try-catch blocks.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
             50% { opacity: 0.6; }
         }
         
+        /* Doom Lighting Effects */
+        @keyframes doom-flicker {
+            0% { opacity: 0.3; filter: brightness(1) sepia(0.5); }
+            3% { opacity: 0.5; filter: brightness(1.2) sepia(0.2); }
+            6% { opacity: 0.3; filter: brightness(1) sepia(0.5); }
+            7% { opacity: 0.3; filter: brightness(1) sepia(0.5); }
+            8% { opacity: 0.1; filter: brightness(0.8) sepia(0.8); }
+            9% { opacity: 0.3; filter: brightness(1) sepia(0.5); }
+            100% { opacity: 0.3; filter: brightness(1) sepia(0.5); }
+        }
+
+        @keyframes doom-pulse-red {
+            0% { box-shadow: inset 0 0 50px rgba(220, 38, 38, 0.2); background-color: rgba(50, 0, 0, 0.1); }
+            50% { box-shadow: inset 0 0 150px rgba(220, 38, 38, 0.5); background-color: rgba(80, 0, 0, 0.2); }
+            100% { box-shadow: inset 0 0 50px rgba(220, 38, 38, 0.2); background-color: rgba(50, 0, 0, 0.1); }
+        }
+
         /* Madness Effects */
         .madness-hallucination {
             animation: hallucination 6s infinite alternate;
