--- a/index.html
+++ b/index.html
@@ -150,6 +150,29 @@
             100% { opacity: 0; transform: translate(-50%, -60%) scale(1.5); filter: brightness(3) hue-rotate(90deg) blur(4px); }
         }
 
+        /* DICE ANIMATIONS */
+        @keyframes rattle {
+            0% { transform: translate(0, 0) rotate(0deg); }
+            25% { transform: translate(-2px, 2px) rotate(-5deg); }
+            50% { transform: translate(2px, -1px) rotate(5deg); }
+            75% { transform: translate(-1px, -2px) rotate(-3deg); }
+            100% { transform: translate(0, 0) rotate(0deg); }
+        }
+        .animate-rattle {
+            animation: rattle 0.1s infinite linear;
+        }
+
+        @keyframes explode-out {
+            0% { transform: translate(-50%, -50%) scale(0.5); opacity: 1; }
+            100% { transform: translate(var(--tx), var(--ty)) scale(0); opacity: 0; }
+        }
+        .particle {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            animation: explode-out 0.8s ease-out forwards;
+        }
+
         ::-webkit-scrollbar {
             width: 6px;
         }
