--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
         .hex-clip {
             clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
         }
+        
+        /* Voxel Cloud Styling */
+        .voxel-block {
+            position: absolute;
+            background: #1a1a2e;
+            /* Creates a pixel-art 3D effect */
+            box-shadow: 
+                2px 2px 0px #0a0a1a,
+                4px 4px 0px #05050a;
+            opacity: 0.6;
+            will-change: transform;
+        }
+
+        @keyframes voxel-drift {
+            0% { transform: translate(-100px, -100px); }
+            100% { transform: translate(110vw, 110vh); }
+        }
+
+        .animate-voxel-drift {
+            animation: voxel-drift linear infinite;
+        }
+
         .animate-shake {
             animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
         }
@@ -34,16 +56,7 @@
             10%, 30%, 50%, 70%, 90% { transform: translate(-2px, -1px) rotate(-1deg); }
             20%, 40%, 60%, 80% { transform: translate(2px, 1px) rotate(1deg); }
         }
-        @keyframes float-up {
-            0% { transform: translate(-50%, -50%) scale(0.5); opacity: 0; }
-            20% { transform: translate(-50%, -100%) scale(1.2); opacity: 1; }
-            100% { transform: translate(-50%, -200%) scale(1); opacity: 0; }
-        }
-        .animate-float-up {
-            animation: float-up 2.0s cubic-bezier(0, 0, 0.2, 1) forwards;
-        }
         
-        /* Weather Animations */
         @keyframes float-slow {
             0% { transform: translate(-10%, -10%) rotate(0deg); }
             50% { transform: translate(10%, 10%) rotate(5deg); }
